--- a/src/components/Divider.css
+++ b/src/components/Divider.css
@@ -1,17 +1,5 @@
 .ui-divider {
   border: none;
-  border-top: 1px solid #e0e0e0;
   width: 100%;
-}
-
-.ui-divider--small {
-  margin: 0.5rem 0;
-}
-
-.ui-divider--medium {
-  margin: 1rem 0;
-}
-
-.ui-divider--large {
-  margin: 1.5rem 0;
+  margin: 0;
 }
